Updated Appendices 1&2 based on Amy's April feedback

--- a/appendix2-intro.qmd
+++ b/appendix2-intro.qmd
@@ -11,7 +11,7 @@ For the T copies that have been digitized (T-A, T-D, T-E, T-F^1^, and T-F^2^), l
 The line and folio numbering provided to the left of each column is specific to each manuscript copy. Breaks in the text column represent column breaks as they appear in each manuscript, and decorative initials appear in proportion to their size in the manuscript. Empty brackets (“[]”) indicate a hole or other physical damage in the parchment, and in rare cases where text has been rendered totally illegible due to damage — such as in copy T-E — question marks (“?”) have been added to represent missing characters.
 
 ### Minimal
-The “Minimal” column, offers a transcription with a low level of editorial intervention, but this column should not be considered diplomatic. Word spacing in this column matches the original manuscript, but features like initial and final letter separation are not represented. Capitalization for most proper names like *Marie* and *Deu* has been added, but all other capitalization reflects the contents of the manuscript copy. The letters u/v and i/j have been adjusted where appropriate. Punctuation only appears in this column if it has been used by the medieval scribe, and scribal abbreviations are left unexpanded.
+The “Minimal” column offers a transcription with a low level of editorial intervention, but this column should not be considered diplomatic. Word spacing in this column matches the original manuscript, but features like initial and final letter separation are not represented. Capitalization for most proper names like *Marie* and *Deu* has been added, but all other capitalization reflects the contents of the manuscript copy. The letters u/v and i/j have been adjusted where appropriate. Punctuation only appears in this column if it has been used by the medieval scribe, and scribal abbreviations are left unexpanded.
 
 ### Intermediate
 In the “Intermediate” column, scribal abbreviations — such as &#xA76F; for “con/com” — are expanded to improve readability. However, all “et” symbols have been left unexpanded as ampersands (“&”) since this abbreviation is still widely used today. Similarly, numbering is presented as written by the scribe either as Roman numerals or spelled out in words.
