Added special case for v.541 in Appendix 2 T-C

--- a/appendix2-T-C.qmd
+++ b/appendix2-T-C.qmd
@@ -45,6 +45,11 @@ process_line <- function(line) {
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
     } else {
+      
+    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
+    if (line_count == 541) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>el ureison leva Marie</div>")
+    }
       ""
     }
   } else {
@@ -145,6 +150,11 @@ process_line <- function(line) {
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
     } else {
+      
+    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
+    if (line_count == 541) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>el ureison leva Marie</div>")
+    }
       ""
     }
   } else {
@@ -254,6 +264,11 @@ process_line <- function(line) {
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
     } else {
+      
+    # SPECIAL CASE: Hard-code line v.541 to fix repetition nesting issue
+    if (line_count == 541) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='1'>D</span>e l'ureison leva Marie</div>")
+    }
       ""
     }
   } else {
