--- a/appendix2-T-E.qmd
+++ b/appendix2-T-E.qmd
@@ -47,6 +47,11 @@ process_line <- function(line) {
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
     } else {
+      
+    # SPECIAL CASE: Hard-code line v.703 to correct nesting/repetition issue
+    if (line_count == 703) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>O</span>rlairomes ci demarie</div>")
+    }
       ""
     }
   } else {
@@ -157,6 +162,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.690 to remove apostrophe in "qu'ele"
     if (line_count == 690) {
       return("<div style='line-height: 1.2;'>Quele jadis soloit amer</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.703 to correct nesting/repetition issue
+    if (line_count == 703) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>O</span>r lairommes ci demarie</div>")
     }
     
     # Add line number div every 5th line
@@ -272,6 +282,11 @@ process_line <- function(line) {
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
     } else {
+      
+    # SPECIAL CASE: Hard-code line v.703 to correct nesting/repetition issue
+    if (line_count == 703) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>O</span>r lairommes ci de Marie</div>")
+    }
       ""
     }
   } else {
