Added special case lines for repetition errors in T-B

--- a/appendix2-T-B.qmd
+++ b/appendix2-T-B.qmd
@@ -108,6 +108,12 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.895 to correct spacing
+    if (line_count == 895) {
+      return("<div style='line-height: 1.2;'>Dame Zosimas lirespot .</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
@@ -208,6 +214,12 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
+    
+    # SPECIAL CASE: Hard-code line v.895 to correct spacing
+    if (line_count == 895) {
+      return("<div style='line-height: 1.2;'>Dame Zosimas li respont .</div>")
+    }
+    
     # Add line number div every 5th line
     line_number <- if (line_count %% 5 == 0) {
       sprintf("<div class='line-number'>%d</div>", line_count)
@@ -321,6 +333,181 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.184 to correct double "Creator"
     if (line_count == 184) {
       return("<div style='line-height: 1.2;'>cant de se Creator n'at cure</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.371 to correct double "Deus"
+    if (line_count == 371) {
+      return("<div style='line-height: 1.2;'>seit ke Deus est ver li iriez.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.376 to correct double "Deus"
+    if (line_count == 376) {
+      return("<div style='line-height: 1.2;'>por quoi Deus est ver vos iriez</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.378 to correct double "Creator"
+    if (line_count == 378) {
+      return("<div style='line-height: 1.2;'>cant men Creator ai perdu</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.393 to correct double "Marie"
+    if (line_count == 393) {
+      return("<div style='line-height: 1.2;'>cant il te dist ave Marie.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.394 to correct double "Deu grasce"
+    if (line_count == 394) {
+      return("<div style='line-height: 1.2;'>de la Deu grasce raemplie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.419 to correct double "Peres"
+    if (line_count == 419) {
+      return("<div style='line-height: 1.2;'>Il fut tes Fiz si fut tes Peres.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.461 to correct double "Pere"
+    if (line_count == 461) {
+      return("<div style='line-height: 1.2;'>d’iluc les condost a sen Pere.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.470 to correct double "Pere"
+    if (line_count == 470) {
+      return("<div style='line-height: 1.2;'>en ciel monta puis a sen Pere</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.475 to correct double "Pere"
+    if (line_count == 475) {
+      return("<div style='line-height: 1.2;'>or siet a la destre sen Pere.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.558 to correct double "Deus"
+    if (line_count == 558) {
+      return("<div style='line-height: 1.2;'>se Deus ne li fait altre aie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.566 to correct double "Damledeu"
+    if (line_count == 566) {
+      return("<div style='line-height: 1.2;'>a Damledeu se comandoit</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.666 to correct double "Deu"
+    if (line_count == 666) {
+      return("<div style='line-height: 1.2;'>a Deu avoient lor tresor</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.680 to correct double "Damledeu"
+    if (line_count == 680) {
+      return("<div style='line-height: 1.2;'>a Damledeu les comandoit</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.689 to correct double "Deu"
+    if (line_count == 689) {
+      return("<div style='line-height: 1.2;'>en Deu avoient grant amor.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.690 to correct double "Deu"
+    if (line_count == 690) {
+      return("<div style='line-height: 1.2;'>de Deu vivoient li plusor</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.736 to correct double "Damledeu"
+    if (line_count == 736) {
+      return("<div style='line-height: 1.2;'>A Damledeu les comandat</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.767 to correct double "Felon"
+    if (line_count == 767) {
+      return("<div style='line-height: 1.2;'>Que le defende del Felon.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.770 to correct double "Marie"
+    if (line_count == 770) {
+      return("<div style='line-height: 1.2;'>La figure vit de Marie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.771 to correct double "Marie"
+    if (line_count == 771) {
+      return("<div style='line-height: 1.2;'>de Marie vit la figure.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.792 to correct double "Deu"
+    if (line_count == 792) {
+      return("<div style='line-height: 1.2;'>se tu en Deu as nule foi</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.793 to correct double "De le grant"
+    if (line_count == 793) {
+      return("<div style='line-height: 1.2;'>Je te conjur par De le grant.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.795 to correct double "Deu"
+    if (line_count == 795) {
+      return("<div style='line-height: 1.2;'>cant la dame ot de Deu parler .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.895 to correct spacing
+    if (line_count == 895) {
+      return("<div style='line-height: 1.2;'>Dame Zosimas li respont .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.932 to correct double "Deu"
+    if (line_count == 932) {
+      return("<div style='line-height: 1.2;'>en Deu ai tote ma fiance</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.944 to correct double "Deu"
+    if (line_count == 944) {
+      return("<div style='line-height: 1.2;'>por Deu Dame nel celez mie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.961 to correct double "Creator"
+    if (line_count == 961) {
+      return("<div style='line-height: 1.2;'>Mercit en rent a Creator.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.964 to correct double "Deu"
+    if (line_count == 964) {
+      return("<div style='line-height: 1.2;'>por Deu te pri ke tu t’en liez</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.970 to correct double "Deu"
+    if (line_count == 970) {
+      return("<div style='line-height: 1.2;'>por Deu aies de moi merci</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1110 to correct double "Deu"
+    if (line_count == 1110) {
+      return("<div style='line-height: 1.2;'>qu’il la li die por Deu</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1134 to correct double "Deu"
+    if (line_count == 1134) {
+      return("<div style='line-height: 1.2;'>por Deu toi pri done le moi</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1183 to correct double "Deu"
+    if (line_count == 1183) {
+      return("<div style='line-height: 1.2;'>Dame dist il a Deu plaisir.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1198 to correct double "Marie"
+    if (line_count == 1198) {
+      return("<div style='line-height: 1.2;'>en alat l’arme de Marie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1230 to correct double "Deu"
+    if (line_count == 1230) {
+      return("<div style='line-height: 1.2;'>sel sevelis a Deu aie</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1249 to correct double "Deus"
+    if (line_count == 1249) {
+      return("<div style='line-height: 1.2;'>bien seit ke Deus li at tremis.</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1316 to correct double "Marie"
+    if (line_count == 1316) {
+      return("<div style='line-height: 1.2;'>por le deserte de Marie</div>")
     }
     
     # Add line number div every 5th line
